--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -68,7 +68,11 @@
 
     </div>
     <div class="web">
-         <div class="top"><h1>Our Packages</h1></div>
+         <div class="top">
+            <h1>Our Packages</h1>
+            <p> We offer flexible website development packages tailored to 
+                meet your needs — whether you're just starting out or ready to scale. Explore our range of solutions below</p>
+        </div>
         <div class="body">
             <div class="process">
                <h2>Website Development Process</h2>
@@ -81,9 +85,7 @@
                         <p> 
                             We begin by defining your project’s goals, scope, timeline, and resources. 
                             This phase includes in-depth information gathering — collecting both business and technical 
-                            requirements — and engaging with key 
-                            stakeholders to understand user needs and identify potential risks. 
-                        </p>
+                            requirements 
                     </div>
                 </div>
 
@@ -115,9 +117,8 @@
                             <h3>Content</h3>
                             <p>
                                We prepare and organize all the necessary website content — including text, images,
-                                videos, and downloads. Content is optimized for SEO, readability, 
-                               and audience engagement. This phase ensures your website speaks clearly 
-                               and effectively to your target users.
+                                videos, and downloads. Content is optimized for the search engine , readability, 
+                               and audience engagement. 
                             </p>
                       </div>
                     </div>
@@ -138,8 +139,7 @@
                         <div class="step-content">
                             <h3>Testing</h3>
                             <p>
-                                We rigorously test your website to ensure it meets all functional and non-functional requirements. Our QA process includes:
-                                 Unit testing, integration testing, system testing, user acceptance testing (UAT).
+                                We rigorously test your website to ensure it meets all functional and non-functional requirements. 
                                 This ensures your site meets or exceeds industry standards before going live.
                             </p>
                       </div>
@@ -170,34 +170,82 @@
             </div>
             <div class="package">
                <div class="item">
-                    <h3> Full website(Templatee) </h3>
+                    <h3> Starter website (Templatee) </h3>
                     <p> 
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce gravida diam vel diam pretium, nec tristique turpis hendrerit. Mauris 
-                        malesuada orci vitae tellus viverra, vitae aliquam elit interdum. Vestibulum lacinia augue non lacinia tincidunt. Morbi diam tellus, 
-                        sollicitudin eu tristique vitae, 
+                       This is a starter website based on exsiting templates
+                       Perfect for individuals, startups, and small businesses who need a fast and affordable online presence.
+                       What you get:   
                     </p>
+                    <br>
+                    <ul>
+                        <li>Professionally designed website using premium templates</li>
+                        <li>maximum of 4 pages (Home, About, Services, Contact,)</li>
+                        <li>Mobile-friendly and responsive layout
+                        <li>Basic Search Engine Optimization(SEO) setup</li>
+                        <li>Social media integration</li>
+                        <li>No content</li>
+                    </ul>
                     <div class="but-row"><button>speak to an expert</button> <button>case study</button></div>
                 </div>
                 <div class="item">
-                    <h3> Full website(customize)  </h3>
+                    <h3> Basic(customize design and development)</h3>
                     <p> 
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce gravida diam vel diam pretium, nec tristique turpis hendrerit. Mauris 
-                        malesuada orci vitae tellus viverra, vitae aliquam elit interdum. Vestibulum lacinia augue non lacinia tincidunt. Morbi diam tellus, 
-                        sollicitudin eu tristique vitae, 
+                        This is a Fully Tailored Designed & Developed website 
+                        Ideal for businesses that want a more branded look without c
+                        omplex backend functionality and limited interactivity.
+                        What you get:
                     </p>
+                    <br>
+                    <ul>
+                        <li>Fully custom design (no templates)</li>
+                        <li>Brand-aligned design and layout</li>
+                        <li>Max of 8 pages</li>
+                        <li>Full responsiveness (desktop, tablet, mobile)</li>
+                        <li>Advanced features (forms and animations)</li>
+                        <li>Basic Search Engine Optimization(SEO) setup</li>
+                        <li>Social media integration</li>
+                        <li>No content</li>
+                    </ul>
                     <div class="but-row"><button>speak to an expert</button> <button>case study</button></div>
                 </div>
                 <div class="item">
-                    <h3> Web development and design(customize) </h3>
+                    <h3>  Standard (Custom Dev + Light Backend) </h3>
                     <p> 
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce gravida diam vel diam pretium, nec tristique turpis hendrerit. Mauris 
-                        malesuada orci vitae tellus viverra, vitae aliquam elit interdum. Vestibulum lacinia augue non lacinia tincidunt. Morbi diam tellus, 
-                        sollicitudin eu tristique vitae, 
+                         For businesses that need a custom website with smart features and backend connectivity.
+                           What you get:
                     </p>
+                    <ul>
+                        <li>Fully Custom design & development (no templates)</li>
+                        <li>unlimited pages</li>
+                        <li>Advanced features (forms,animations,blogs)</li>
+                        <li>Interactive forms (inquiries, bookings, quote requests)</li>
+                        <li>Admin dashboard (basic)</li>
+                        <li>Backend CMS or control panel for updates</li>
+                        <li>Blog or announcements section</li>
+                        <li>Basic email automation</li>
+                        <li>Search engine  optimized Content </li>
+                    </ul>
                     <div class="but-row"><button>speak to an expert</button> <button>case study</button></div>
                 </div>
                 <div class="item">
-                    <h3> web development </h3>
+                    <h3> Premium </h3>
+                    <p> 
+                         For organizations needing advanced interactivity (e.g., dashboards, member portals, data entry, etc.).
+                         What you get:
+                    </p>
+                    <ul>
+                        <li>Custom web application (no templates)</li>
+                        <li>Authentication & user roles</li>
+                        <li>Dashboard interfaces with charts</li>
+                        <li>Forms with file uploads & validations</li>
+                        <li>Email notifications</li>
+                        <li>Calendar or appointment system</li>
+                        <li>Integration with APIs (e.g., WhatsApp, payment gateway, Google Maps)</li>
+                    </ul>
+                    <div class="but-row"><button>speak to an expert</button> <button>case study</button></div>
+                </div>
+                <div class="item">
+                    <h3> Premium +</h3>
                     <p> 
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce gravida diam vel diam pretium, nec tristique turpis hendrerit. Mauris 
                         malesuada orci vitae tellus viverra, vitae aliquam elit interdum. Vestibulum lacinia augue non lacinia tincidunt. Morbi diam tellus, 
@@ -208,10 +256,20 @@
                 <div class="item">
                     <h3> E-commerce </h3>
                     <p> 
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce gravida diam vel diam pretium, nec tristique turpis hendrerit. Mauris 
-                        malesuada orci vitae tellus viverra, vitae aliquam elit interdum. Vestibulum lacinia augue non lacinia tincidunt. Morbi diam tellus, 
-                        sollicitudin eu tristique vitae, 
+                         Perfect for stores that want to sell products or services online with payment integration and inventory control.
+
+                      What you get:
                     </p>
+                    <ul>
+                        <li>Custom-designed storefront</li>
+                        <li>Product pages, categories, cart, checkout</li>
+                        <li>Admin dashboard to manage products, orders, users</li>
+                        <li>Payment gateway integration (Paystack)</li>
+                        <li>Order notifications via email</li>
+                        <li>Basic inventory tracking</li>
+                        <li>User accounts and order history</li>
+                        <li>Mobile-friendly experience</li>
+                    </ul>
                     <div class="but-row"><button>speak to an expert</button> <button>case study</button></div>
                 </div>
             </div>
@@ -219,39 +277,39 @@
 
     </div>
     <div class="support">
-        <div class="">
-            <h3>Already have a website, no problem</h3>
+        <div class="others">
+            <h2>Already have a website, no problem</h3>
             <p>At PadoLabs, we don’t just build new websites — we also revamp, 
                 maintain, and upgrade existing ones to meet modern standards and business goals.
             </p>
-            <div>
+            <div class="inner">
                 <h3>Website Revamp</h3>
                 <p>
                 We refresh outdated websites with modern design, 
                 improved UX, and faster performance — all while preserving your brand identity.
                 </p>
             </div>
-            <div>
+            <div class="inner">
                 <h3>Maintenance & Support</h3>
                 <p>
                 We provide ongoing support to ensure your website remains secure, updated, and functioning smoothly.
                 </p>
             </div>
-            <div>
+            <div class="inner">
                 <h3> SEO Considerations</h3>
                 <p>
                 We optimize your site structure, metadata, URLs, and performance to retain 
                 or improve your search engine rankings during revamps or migrations.
                 </p>
             </div>
-            <div>
+            <div class="inner">
                 <h3>Responsive Development</h3>
                 <p>
                 We ensure your site works seamlessly across all screen 
                 sizes — mobile, tablet, and desktop — for the best user experience.
                 </p>
             </div>
-            <div>
+            <div class="inner">
                 <h3>Website Migration Services</h3>
                 <p>
                 Need to move your website to a better platform? We handle:
@@ -264,12 +322,16 @@
             
         </div>
         <div class="graphics">
-
         </div>
     </div>
     <div class="recomedations">
-
+          
     </div>
+    <footer>
+
+    </footer>
+</body>
+</html>
     <footer>
 
     </footer>
