--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="odd"><h1>Benefits</h1></div>
         <div class="box-cont">
            <div class="box">
-            <img src="images/247.png" alt="logo" width="100" height="100">
+            <img src="images/247.png" alt="logo"  height="100">
             <p> 
             While you're offline, your website keeps working 
             — promoting your brand, answering questions, and turning visitors into customers 24/7.
@@ -54,25 +54,26 @@
            </div>
 
            <div class="box">
-            <img src="images/world.jpeg" alt="logo" width="130" height="90">
+            <img src="images/world.jpeg" alt="logo"  height="90">
             <p>
                 Put your business where the world biggest market 
                 — and connect with clients you never imagined you could reach.</p>
            </div>
 
            <div class="box">
-            <img src="images/cheap.png" alt="logo" width="100" height="100">
+            <img src="images/cheap.png" alt="logo"  height="100">
             <p>Build your digital presence for a fraction of the cost of renting a physical storefront.</p>
            </div>
         </div>
 
     </div>
     <div class="web">
-         <div class="top">
-            <h1>Our Packages</h1>
-            <p> We offer flexible website development packages tailored to 
-                meet your needs — whether you're just starting out or ready to scale. Explore our range of solutions below</p>
-        </div>
+            <div class="top">
+                <h1>Our Packages</h1>
+                <br>
+                <p> We offer flexible website development packages tailored to 
+                    meet your needs — whether you're just starting out or ready to scale. Explore our range of solutions below</p>
+            </div>
         <div class="body">
             <div class="process">
                <h2>Website Development Process</h2>
@@ -186,18 +187,12 @@
                         <li>No content</li>
                     </ul>
                     <div class="but-row">
-                        <div>
+                         <div class="left-group">
                             <button>speak to an expert</button>
                             <button>case study</button>
                         </div>
 
                         <div class="right-group">
-                            <div class="price">
-                                <h4>Price per page</h4>
-                                <span class="real">N5000</span>
-                                <span class="promo">free</span>
-                                <p>hosting and domain-name charges not included</p>
-                            </div>
                             <button>Book service</button>
                         </div>
                         </div>
@@ -223,18 +218,12 @@
                         <li>No content</li>
                     </ul>
                                             <div class="but-row">
-                        <div>
+                         <div class="left-group">
                             <button>speak to an expert</button>
                             <button>case study</button>
                         </div>
 
                         <div class="right-group">
-                            <div class="price">
-                                <h4>Price per page</h4>
-                                <span class="real">N5000</span>
-                                <span class="promo">free</span>
-                                <p>hosting and domain-name charges not included</p>
-                            </div>
                             <button>Book service</button>
                         </div>
                         </div>
@@ -258,19 +247,12 @@
                         <li>Search engine  optimized Content </li>
                     </ul>
                     <div class="but-row">
-                        <div>
+                        <div class="left-group">
                             <button>speak to an expert</button>
                             <button>case study</button>
                         </div>
 
                         <div class="right-group">
-                            
-                           <div class="price">
-                                <h4>Price per page</h4>
-                                <span class="real">N5000</span>
-                                <span class="promo">free</span>
-                                <p>hosting and domain-name charges not included</p>
-                            </div>
                             <button>Book service</button>
                         </div>
                         </div>
@@ -292,19 +274,12 @@
                         <li>Integration with APIs (e.g., WhatsApp, payment gateway, Google Maps)</li>
                     </ul>
                    <div class="but-row">
-                        <div>
+                        <div class="left-group">
                             <button>speak to an expert</button>
                             <button>case study</button>
                         </div>
 
                         <div class="right-group">
-                            
-                            <div class="price">
-                                <h4>Price per page</h4>
-                                <span class="real">N5000</span>
-                                <span class="promo">free</span>
-                                <p>hosting and domain-name charges not included</p>
-                            </div>
                             <button>Book service</button>
                         </div>
                         </div>
@@ -327,18 +302,12 @@
                         <li>Mobile-friendly experience</li>
                     </ul>
                     <div class="but-row">
-                        <div>
+                         <div class="left-group">
                             <button>speak to an expert</button>
                             <button>case study</button>
                         </div>
 
                         <div class="right-group">
-                           <div class="price">
-                                <h4>Price per page</h4>
-                                <span class="real">N5000</span>
-                                <span class="promo">free</span>
-                                <p>hosting and domain-name charges not included</p>
-                            </div>
                             <button>Book service</button>
                         </div>
                         </div>
@@ -350,7 +319,7 @@
     </div>
     <div class="support">
         <div class="others">
-            <h2>Already have a website, no problem</h3>
+            <h2>Already have a website, no problem</h2>
             <p>At PadoLabs, we don’t just build new websites — we also revamp, 
                 maintain, and upgrade existing ones to meet modern standards and business goals.
             </p>
@@ -403,29 +372,28 @@
            <div class="rec-box">
             <img src="images/avatar.png">
             <blockquote>
-              <span>&#8220;</span>  I had worked along with paul during the initial phase of our venture which needed Web development. 
-            he is a resourceful  and reseliant nevr giving up on a problem. <span>&#8220;</span>
+              <span>&#8220;</span>  I had worked along with paul during the initial phase of our venture which . <span>&#8220;</span>
             </blockquote>
            </div>
            <div class="rec-box">
              <img src='images/avatar.png'>
             <blockquote>
-              <span>&#8220;</span>  I had worked along with paul during the initial phase of our venture which needed Web development. 
-            he is a resourceful  and reseliant nevr giving up on a problem. <span>&#8220;</span>
+              <span>&#8220;</span>  I had worked along with paul during the initial phase of our venture which . 
+            <span>&#8220;</span>
             </blockquote>
            </div>
            <div class="rec-box">
              <img src="images/avatar.png">
             <blockquote>
-              <span>&#8220;</span>  I had worked along with paul during the initial phase of our venture which needed Web development. 
-            he is a resourceful  and reseliant nevr giving up on a problem. <span>&#8220;</span>
+              <span>&#8220;</span>  I had worked along with paul during the initial phase of our venture which . 
+            <span>&#8220;</span>
             </blockquote>
            </div>
            <div class="rec-box">
               <img src="images/avatar.png">
              <blockquote>
-              <span>&#8220;</span>  I had worked along with paul during the initial phase of our venture which needed Web development. 
-            he is a resourceful  and reseliant nevr giving up on a problem. <span>&#8220;</span>
+              <span>&#8220;</span>  I had worked along with paul during the initial phase of our venture which . 
+            <span>&#8220;</span>
             </blockquote>
            </div>
         </div>
