--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="padolabs.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>PadoLabs</title>
 </head>
 <body>
@@ -38,15 +40,19 @@
       <div class="grad-layer">
           <div class="content">
                <h1>Give your Business or Portfolio the online Presence It deserves </h1>
-               <h4> Show the world what you can do today with your own personal website</h4>      
+               <h3> Show the world what you can do today with your own personal website</h3>  
+               <a href="#body"><button class="hero-btn">
+                     Get Started
+               </button></a>    
           </div>
       </div>
     </div>
     <div class="benefits">
-        <div class="odd"><h1>Benefits</h1></div>
+        <div class="odd"><h2>Why your business needs a website</h2></div>
         <div class="box-cont">
            <div class="box">
-            <img src="images/247.png" alt="logo"  height="100">
+            <i class="fa-solid fa-clock"></i>
+            <h3 >24/7 avalability</h3>
             <p> 
             While you're offline, your website keeps working 
             — promoting your brand, answering questions, and turning visitors into customers 24/7.
@@ -54,14 +60,16 @@
            </div>
 
            <div class="box">
-            <img src="images/world.jpeg" alt="logo"  height="90">
+           <i class="fa-solid fa-globe"></i>
+           <h3 >Internet Presence</h3>
             <p>
                 Put your business where the world biggest market 
                 — and connect with clients you never imagined you could reach.</p>
            </div>
 
            <div class="box">
-            <img src="images/cheap.png" alt="logo"  height="100">
+            <i class="fas fa-tag"></i>
+            <h3 >At Affordable Rates</h3>
             <p>Build your digital presence for a fraction of the cost of renting a physical storefront.</p>
            </div>
         </div>
@@ -74,7 +82,7 @@
                 <p> We offer flexible website development packages tailored to 
                     meet your needs — whether you're just starting out or ready to scale. Explore our range of solutions below</p>
             </div>
-        <div class="body">
+        <div class="body" id="body">
             <div class="process">
                <h2>Website Development Process</h2>
                 <div class="process-wrapper">
@@ -366,7 +374,7 @@
         <div class="graphics">
         </div>
     </div>
-    <div class="benefits">
+   <!-- <div class="benefits">
         <div class="odd"><h1>Recomedations</h1></div>
         <div class="rec-cont">
            <div class="rec-box">
@@ -398,10 +406,11 @@
            </div>
         </div>
         <br>
-        <h2 style="text-align: center;"> Please Leave a Recomendation by <button>Clicking here</button> </h2>
-    </div>
+        <h3 style="text-align: center;"> Please Leave a Recomendation by <button>Clicking here</button> </h3>
+    </div>-->
     <footer>
 
     </footer>
 </body>
 </html>
+
