--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         </div>
 
                         <div class="right-group">
-                            <button>Book service</button>
+                           <a href='booking.html'><button>Book service</button></a>
                         </div>
                         </div>
 
@@ -232,7 +232,7 @@
                         </div>
 
                         <div class="right-group">
-                            <button>Book service</button>
+                            <a href='booking.html'><button>Book service</button></a>
                         </div>
                         </div>
 
@@ -261,7 +261,7 @@
                         </div>
 
                         <div class="right-group">
-                            <button>Book service</button>
+                           <a href='booking.html'><button>Book service</button></a>
                         </div>
                         </div>
 
@@ -288,7 +288,7 @@
                         </div>
 
                         <div class="right-group">
-                            <button>Book service</button>
+                           <a href='booking.html'><button>Book service</button></a>
                         </div>
                         </div>
                 </div>
@@ -316,7 +316,7 @@
                         </div>
 
                         <div class="right-group">
-                            <button>Book service</button>
+                           <a href='booking.html'><button>Book service</button></a>
                         </div>
                         </div>
 
@@ -413,4 +413,5 @@
     </footer>
 </body>
 </html>
+
 
