--- a/booking.html
+++ b/booking.html
@@ -13,7 +13,7 @@
             <h2>PADOLABS</h2>
         </div>
         <div class="nav">
-            <div><p>Home</p></div>
+            <div><p><a href='index.html'>Home</a></p></div>
             <div><p>Our Services</p></div>
             <div><p>Contact us</p> </div>
         </div>
@@ -315,4 +315,5 @@
 </div>
 </form>
 </body>
+
 </html>
